syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
  rpc GetJokeById(JokeId) returns (JokeBody) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message JokeId {
  int32 id = 1;
}

message JokeBody {
  string joke = 1;
}
